...
                    .align(Alignment.BottomEnd)
                    .padding(16.dp)

            ) {
                Icon(
                    Icons.Filled.Add,
                    contentDescription = "Add",
                    tint = Color.White
                )
            }

            if (showDialog) {
                AlertDialogAzkar(
...
